noinst_LIBRARIES	= libx11.a

libx11_a_SOURCES	= cubehash.c defs_x5.h echo.c groestl.c jh.c luffa.c shavite.c simd.c sph_blake.h sph_bmw.h sph_cubehash.h sph_echo.h sph_groestl.h sph_jh.h sph_keccak.h sph_luffa.h sph_shavite.h sph_simd.h sph_skein.h sph_types.h xcoin.c
libx11_a_CPPFLAGS	= -I$(top_srcdir)
